--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
   <head>
     <title>Сокращатель Очка</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -9,7 +15,7 @@
       <h1>Сокращатель Очка</h1>
       <p>Лучший сервис для сокращения ссылок</p>
 
-      <form id="form" method="post">
+      <form id="formShort" method="post">
         <input
           value=""
           type="url"
@@ -19,12 +25,28 @@
         <button id="button" type="submit">Сократить</button>
       </form>
 
-      <p id="result">
-      </p>
+      <p id="result"></p>
 
       <br />
-
-      <a href="https://github.com/ShitCoderz/" target="_blank">@ShitCoderz</a>
+      <p>Лучший сервис для удлинение ссылок</p>
+      <form id="formLong" method="post">
+        <input
+          value=""
+          type="url"
+          id="inputLongUrl"
+          placeholder="https://google.com/"
+        />
+        <button id="buttonLong" type="submit">
+          <div class="line"></div>
+          <span class="text-anim">Удлинить</span>
+        </button>
+      </form>
+      <p id="resultLong"></p>
+      <br />
+      <a href="https://github.com/ShitCoderz/" target="_blank"
+        ><i class="fab fa-github"></i> ShitCoderz</a
+      >
+      
     </main>
     <script src="/javascripts/script.js"></script>
   </body>
