--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Сокращатель Очка</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
