--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Сокращатель Очка</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -43,7 +43,9 @@
         </button>
       </form>
       <p id="resultLong"></p>
-      Перетащи сокращатель в панель закладок для быстрого сокращения ссылок
+      <p>
+        Перетащи сокращатель в панель закладок для быстрого сокращения ссылок
+      </p>
       <a
         href="javascript:(() => {
         (async () => {
@@ -62,14 +64,15 @@
           })()
       })()"
       >
-        <img src="" alt="" />
+        <img class="link-icon" alt="Сокращатель" src="./images/icon.svg" />
       </a>
+      <br />
       <br />
       <a href="https://github.com/ShitCoderz/" target="_blank"
         ><i class="fab fa-github"></i> ShitCoderz</a
       >
       <br />
     </main>
-    <script src="/javascripts/script.js"></script>
+    <script src="./javascripts/script.js"></script>
   </body>
 </html>
