--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       <p class="result" id="result"></p>
 
       <br />
-      <p>Лучший сервис для удлинение ссылок</p>
+      <p>Лучший сервис для удлинения ссылок</p>
       <form class="form" id="formLong" method="post">
         <input
           class="input"
