Update api path

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       <a
         href="javascript:(() => {
         (async () => {
-            const zapros = await fetch('https://shitcoderz.ru/links', {
+            const zapros = await fetch('https://shitcoderz.ru/c', {
               method: 'POST',
               body: JSON.stringify({
                 url: document.location.href,
