--- a/public/index.html
+++ b/public/index.html
@@ -71,8 +71,8 @@
               },
             });
             const res = await zapros.json();
-            navigator.clipboard.writeText(`https://shitcoderz.ru/links/${res.id}`);
-            alert(`https://shitcoderz.ru/links/${res.id}`);
+            navigator.clipboard.writeText(`https://shitcoderz.ru/c/${res.id}`);
+            alert(`https://shitcoderz.ru/c/${res.id}`);
           })()
       })()"
       >
