--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Сокращатель Очка</title>
+    <title>Сокращатель ссылок</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
@@ -13,7 +13,7 @@
 
   <body>
     <main>
-      <h1>Сокращатель Очка</h1>
+      <h1>Сокращатель ссылок</h1>
       <p>Лучший сервис для сокращения ссылок</p>
 
       <label for="theme-switch-checkbox">
